--- a/story.html
+++ b/story.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <!-- Creado con Storyline 360 - http://www.articulate.com  -->
   <!-- version: 3.55.25975.0 -->
-  <title>dictado</title>
+  <title>TAREAS</title>
   <meta http-equiv="x-ua-compatible" content="IE=edge"/>
   <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no,shrink-to-fit=no,minimal-ui"/>
   <meta name="apple-mobile-web-app-capable" content="yes"/>
@@ -50,7 +50,7 @@
       productChannel: 'stable',
       publishSource: 'storyline',
       aid: 'auth0|5ba5466402d39d62eb1e189f',
-      cid: 'f1bd3d7c-57de-4472-a872-26ceb5cddb5d',
+      cid: 'c2dcf380-7751-4be9-a6f7-f7cfffa2155b',
       playerVersion: '3.55.25975.0',
       maxIosVideoElements: 10,
 
@@ -118,7 +118,7 @@
   </script>
 
   <div class="mobile-load-title-overlay" style="display: none">
-    <div class="mobile-load-title">dictado</div>
+    <div class="mobile-load-title">TAREAS</div>
   </div>
 
   <div class="mobile-chrome-warning"></div>
