--- a/story.html
+++ b/story.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <!-- Creado con Storyline 360 - http://www.articulate.com  -->
-  <!-- version: 3.55.25975.0 -->
-  <title>TAREAS</title>
+  <!-- version: 3.58.26627.0 -->
+  <title>dictado</title>
   <meta http-equiv="x-ua-compatible" content="IE=edge"/>
   <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no,shrink-to-fit=no,minimal-ui"/>
   <meta name="apple-mobile-web-app-capable" content="yes"/>
@@ -43,15 +43,15 @@
       captureRc: false,
       browserSize: 'optimal',
       bgColor: '#282828',
-      features: 'MultipleQuizTracking',
+      features: 'InsertSvgPicture,LrsSupport,MultipleQuizTracking,XApiSupport',
       themeName: 'unified',
       preloaderColor: '#FFFFFF',
       suppressAnalytics: false,
       productChannel: 'stable',
       publishSource: 'storyline',
-      aid: 'auth0|5ba5466402d39d62eb1e189f',
-      cid: 'c2dcf380-7751-4be9-a6f7-f7cfffa2155b',
-      playerVersion: '3.55.25975.0',
+      aid: 'aid|2aeaee37-cbd8-4a9f-a8d4-89644359078d',
+      cid: 'f1bd3d7c-57de-4472-a872-26ceb5cddb5d',
+      playerVersion: '3.58.26627.0',
       maxIosVideoElements: 10,
 
       
@@ -118,7 +118,7 @@
   </script>
 
   <div class="mobile-load-title-overlay" style="display: none">
-    <div class="mobile-load-title">TAREAS</div>
+    <div class="mobile-load-title">dictado</div>
   </div>
 
   <div class="mobile-chrome-warning"></div>
